--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,12 @@
 {
+  "parser": "babel-eslint",  // 解析eslint本身不支持的特性
   "extends": "airbnb",
+  "env": {
+    "browser": true,
+    "node": true
+  },
   "rules": {
-    "linebreak-style": [true, "CRLF"]
+    "linebreak-style": [true, "CRLF"],
+    "indent": ["error", 2]
   }
 }
