--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
-    "dll": "webpack --config config/webpack.config.dll.js"
+    "dll": "webpack --config config/webpack.config.dll.js",
+    "report:dev": "cross-env npm_config_report=true npm run dev",
+    "report:prod": "cross-env npm_config_report=true npm run build"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
@@ -38,6 +40,7 @@
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
@@ -52,8 +55,11 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.4",
     "happypack": "^5.0.0",
     "html-loader": "^0.5.5",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
@@ -62,10 +68,13 @@
     "postcss-assets": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
+    "postcss-px2vw": "0.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "styled-jsx": "^3.2.1",
+    "styled-jsx-plugin-postcss": "^2.0.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
