--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,9 @@
 /coverage
 
 # production
-/dist/
-!/dist/manifest.json
-!/dist/vendor.dll.js
-
+dist/*
+!dist/manifest.json
+!dist/vendor.dll.js
 
 # misc
 .DS_Store
