--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
-    "clean-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
@@ -71,6 +71,7 @@
     "postcss-px2vw": "0.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "styled-jsx": "^3.2.1",
