--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
+    "server": "cross-env NODE_ENV=development commission_server=true node config/dev.server.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
     "dll": "webpack --config config/webpack.config.dll.js",
     "report:dev": "cross-env npm_config_report=true npm run dev",
@@ -55,6 +56,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "express": "^4.17.1",
     "file-loader": "^2.0.0",
     "fs": "0.0.1-security",
     "glob": "^7.1.4",
@@ -82,7 +84,9 @@
     "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.1.5",
     "webpack-spritesmith": "^0.5.4"
   },
