--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^3.0.0",
+    "colors": "^1.3.3",
     "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
@@ -93,6 +94,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "antd": "^3.10.9",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "core-js": "^2.6.9"
   }
 }
