--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "file-loader": "^2.0.0",
     "fs": "0.0.1-security",
     "glob": "^7.1.4",
+    "hanzi-writer": "^2.0.4",
+    "hanzi-writer-data": "^2.0.1",
     "happypack": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-externals-plugin": "^3.8.0",
